--- a/TASVideos/Pages/Publications/Rate.cshtml
+++ b/TASVideos/Pages/Publications/Rate.cshtml
@@ -26,6 +26,33 @@
 	</form-button-bar>
 </form>
 <hr />
+<h4>Rating Details</h4>
+@if (Model.AllRatings.Any())
+{
+	<label>@Model.AllRatings.Count() total ratings</label>
+	<br />
+	<label>Rating Average: @Model.OverallRating</label>
+	<div class="table-container">
+		<table class="table table-striped table-bordered">
+			<tr>
+				<th>@Html.DisplayNameFor(m => m.AllRatings.First().UserName)</th>
+				<th>@Html.DisplayNameFor(m => m.AllRatings.First().Rating)</th>
+			</tr>
+			@foreach (var ratings in Model.VisibleRatings.OrderBy(r => r.UserName))
+			{
+				<tr @Html.Raw(!ratings.IsPublic ? "style=\"opacity: 0.50\"" : "")>
+					<td>@(ratings.IsPublic ? "" : "*") @ratings.UserName</td>
+					<td>@ratings.Rating</td>
+				</tr>
+			}
+		</table>
+	</div>
+}
+else
+{
+	<warning-alert>No Ratings</warning-alert>
+}
+
 @await Component.RenderWiki("System/MovieRatingGuidelines")
 
 @section Scripts {
