--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -66,12 +66,12 @@
 		var lowered = onlineWatchingUrl.ToLower();
 		if (lowered.Contains("youtube"))
 		{
-			return " on Youtube";
+			return " on YouTube";
 		}
 
 		if (lowered.Contains("nicovideo"))
 		{
-			return "On Nicovideo";
+			return "on Nicovideo";
 		}
 
 		return "";
