--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -270,7 +270,7 @@
 			</div>
 			<div class="col-auto">
 				<small>
-					Emulator:
+					Emulator Replay:
 					<div condition="!string.IsNullOrWhiteSpace(Model.EmulatorVersion)">
 						<span class="ms-2">@Model.EmulatorVersion</span>
 					</div>
