--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -55,6 +55,27 @@
 			_ => ""
 		};
 	}
+
+	static string StreamingSiteDisplay(string? onlineWatchingUrl)
+	{
+		if (string.IsNullOrWhiteSpace(onlineWatchingUrl))
+		{
+			return "";
+		}
+
+		var lowered = onlineWatchingUrl.ToLower();
+		if (lowered.Contains("youtube"))
+		{
+			return " on YouTube";
+		}
+
+		if (lowered.Contains("nicovideo"))
+		{
+			return " on Niconico";
+		}
+
+		return "";
+	}
 }
 
 <card class="border border-primary">
@@ -103,10 +124,9 @@
 					@foreach (var url in Model.OnlineWatchingUrls)
 					{
 						<a href="@url.Url" class="btn btn-primary btn-sm mt-1" target="_blank">
-							<i class="fa fa-external-link"></i> Watch @(!string.IsNullOrWhiteSpace(url.DisplayName) ? $"{url.DisplayName}" : "")
+							<i class="fa fa-external-link"></i> Watch @(!string.IsNullOrWhiteSpace(url.DisplayName) ? $"{url.DisplayName}" : StreamingSiteDisplay(url.Url))
 						</a>
 					}
-					<a asp-page="/Publications/View" asp-page-handler="Download" asp-route-id="@Model.Id" class="btn btn-primary btn-sm mt-1"><i class="fa fa-download"></i> Download (@System.IO.Path.GetExtension(Model.MovieFileName))</a>
 				</div>
 				<div>
 					<a asp-page="/Submissions/View" asp-route-id="@Model.SubmissionId" class="btn btn-secondary btn-sm mt-1"><i class="fa fa-info-circle"></i> Author notes</a>
@@ -249,9 +269,18 @@
 				</small>
 			</div>
 			<div class="col-auto">
-				<small condition="!string.IsNullOrWhiteSpace(Model.EmulatorVersion)">
-					Emulator Version:<br /><span class="ms-2">@Model.EmulatorVersion</span>
+				<small>
+					Emulator Replay:
+					<div condition="!string.IsNullOrWhiteSpace(Model.EmulatorVersion)">
+						<span class="ms-2">@Model.EmulatorVersion</span>
+					</div>
+					<div>
+						<a asp-page="/Publications/View" asp-page-handler="Download" asp-route-id="@Model.Id" class="ms-2">
+							<i class="fa fa-download"></i> Download (@System.IO.Path.GetExtension(Model.MovieFileName))
+						</a>
+					</div>
 				</small>
+				
 			</div>
 			<div condition="Model.MovieFileLinks.Any()" class="col-auto">
 				<small>
