--- a/TASVideos/Pages/Shared/_NavBarPartial.cshtml
+++ b/TASVideos/Pages/Shared/_NavBarPartial.cshtml
@@ -1,3 +1,4 @@
+@using static TASVideos.Data.Entity.PermissionTo;
 <navbar class="flex-wrap me-2 me-md-0 fw-bold">
 	<nav-item activate="Home">
 		<a id="Home" class="nav-link" href="/">Home</a>
@@ -25,9 +26,9 @@
 		<a id="Welcome" class="nav-link" href="/WelcomeToTASVideos">About</a>
 	</nav-item>
 	<nav-dropdown id="AdminDropdown" activate="Admin"
-				  permissions="new[] { PermissionTo.ViewPrivateUserData, PermissionTo.EditUsers, PermissionTo.EditRoles, PermissionTo.TagMaintenance, PermissionTo.CatalogMovies, PermissionTo.GameSystemMaintenance }">
+				  permissions="new[] { ViewPrivateUserData, EditUsers, EditRoles, TagMaintenance, CatalogMovies, GameSystemMaintenance }">
 		<a id="MediaPosts" class="dropdown-item" href="/MediaPosts">Media Posts</a>
-		<a id="Users" permissions="new[] { PermissionTo.ViewPrivateUserData, PermissionTo.EditUsers }" class="dropdown-item" asp-page="/Users/List">Users</a>
+		<a id="Users" permissions="new[] { ViewPrivateUserData, EditUsers }" class="dropdown-item" asp-page="/Users/List">Users</a>
 		<a id="Roles" class="dropdown-item" asp-page="/Roles/List">Roles</a>
 		<a id="Permissions" class="dropdown-item" asp-page="/Permissions/Index">Permissions</a>
 		<a id="Games" permission="CatalogMovies" class="dropdown-item" asp-page="/Games/List">Games</a>
@@ -38,7 +39,7 @@
 		<a id="Systems" permission="GameSystemMaintenance" class="dropdown-item" asp-page="/Systems/Index">Systems</a>
 	</nav-dropdown>
 	<nav-dropdown id="WikiDropdown" activate="Wiki"
-				  permissions="new[] { PermissionTo.EditWikiPages, PermissionTo.EditSystemPages, PermissionTo.MoveWikiPages, PermissionTo.DeleteWikiPages }">
+				  permissions="new[] { EditWikiPages, EditSystemPages, MoveWikiPages, DeleteWikiPages }">
 		<a id="SandBox" class="dropdown-item" href="/SandBox">SandBox</a>
 		<a id="RecentChanges" class="dropdown-item" href="/RecentChanges">Recent Changes</a>
 		<a id="Orphans" class="dropdown-item" href="/WikiOrphans">Orphans</a>
