--- a/TASVideos/Pages/Games/List.cshtml
+++ b/TASVideos/Pages/Games/List.cshtml
@@ -35,9 +35,10 @@
 	{
 		<tr>
 			<td>@game.Id</td>
-			<td>@game.DisplayName</td>
 			<td>
-				<a asp-page="Index" asp-route-id="@game.Id" class="btn btn-sm btn-secondary"><i class="fa fa-eye"></i> View</a>
+				<a asp-page="Index" asp-route-id="@game.Id">@game.DisplayName</a>
+			</td>
+			<td>
 				<a asp-page="Edit" permission="CatalogMovies" asp-route-id="@game.Id" class="btn btn-primary btn-sm"><i class="fa fa-pencil"></i> Edit</a>
 				<a asp-page="Versions/List" asp-route-gameId="@game.Id" class="btn btn-secondary btn-sm"><i class="fa fa-pencil"></i> Versions</a>
 			</td>
