add system to game results on /Search page, resolves #1335

--- a/TASVideos/Pages/Search/Index.cshtml
+++ b/TASVideos/Pages/Search/Index.cshtml
@@ -36,6 +36,7 @@
 					<td>
 						<a asp-page="/Games/Index" asp-route-id="@result.Id">@result.DisplayName</a>
 					</td>
+					<td>@string.Join(",", result.Systems.Distinct())</td>
 				</tr>
 			}
 		</table>
