--- a/TASVideos/Pages/Search/Index.cshtml
+++ b/TASVideos/Pages/Search/Index.cshtml
@@ -30,6 +30,11 @@
 	<h4>Game Results:</h4>
 	<div class="table-container">
 		<table class="table table-striped table-bordered">
+			<tr>
+				<th>Game</th>
+				<th>System</th>
+				<th>Groups</th>
+			</tr>
 			@foreach (var result in Model.GameResults.Take(IndexModel.PageSize))
 			{
 				<tr>
@@ -37,6 +42,12 @@
 						<a asp-page="/Games/Index" asp-route-id="@result.Id">@result.DisplayName</a>
 					</td>
 					<td>@string.Join(",", result.Systems.Distinct())</td>
+					<td>
+						@foreach (var group in result.Groups)
+						{
+							<a asp-page="/GameGroups/Index" asp-route-id="@group.Id">@group.Name</a>
+						}
+					</td>
 				</tr>
 			}
 		</table>
