--- a/TASVideos/Pages/Wiki/PageDoesNotExist.cshtml
+++ b/TASVideos/Pages/Wiki/PageDoesNotExist.cshtml
@@ -34,4 +34,6 @@ Want to create it?
 		<li>Write the page content, and click Save to create the page.</li>
 	}
 </ul>
-When creating new pages, always ensure that there is some other page that links to the newly created page. Otherwise your page will just become a <a href="/WikiOrphans">wiki orphan</a> that will be quickly forgotten.
+
+<p>When creating new pages, always ensure that there is some other page that links to the newly created page. Otherwise your page will just become a <a href="/WikiOrphans">wiki orphan</a> that will be quickly forgotten.</p>
+<p>Click here to see <a asp-page="/Wiki/Referrers" asp-route-path="@url">Referrers</a></p>
