--- a/TASVideos/Pages/Account/Register.cshtml
+++ b/TASVideos/Pages/Account/Register.cshtml
@@ -25,12 +25,12 @@
 			</form-group>
 			<form-group>
 				<label asp-for="Password"></label>
-				<input asp-for="Password" class="form-control" autocomplete="new-password" />
+				<input asp-for="Password" class="form-control" autocomplete="new-password" maxlength="524288" />
 				<span asp-validation-for="Password" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="ConfirmPassword"></label>
-				<input asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" />
+				<input asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" maxlength="524288" />
 				<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 			</form-group>
 		</column>
