apply same password logic from register on Profile/ChangePassword

--- a/TASVideos/Pages/Profile/ChangePassword.cshtml
+++ b/TASVideos/Pages/Profile/ChangePassword.cshtml
@@ -12,12 +12,12 @@
 			<input id="UserName" name="UserName" class="d-none" value="@User.Name()" autocomplete="username" />
 			<form-group>
 				<label asp-for="OldPassword"></label>
-				<input asp-for="OldPassword" class="form-control" autocomplete="current-password" />
+				<input asp-for="OldPassword" class="form-control" autocomplete="current-password"  maxlength="524288" />
 				<span asp-validation-for="OldPassword" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="NewPassword"></label>
-				<input asp-for="NewPassword" class="form-control" autocomplete="new-password" />
+				<input asp-for="NewPassword" class="form-control" autocomplete="new-password"  maxlength="524288" />
 				<span asp-validation-for="NewPassword" class="text-danger"></span>
 			</form-group>
 			<form-group>
