--- a/TASVideos/Pages/Games/List.cshtml
+++ b/TASVideos/Pages/Games/List.cshtml
@@ -9,33 +9,34 @@
 <a asp-page="/GameGroups/List" class="btn btn-primary mb-3 float-end mr-5">Game Groups</a>
 <a asp-page="Edit" permission="CatalogMovies" class="btn btn-primary mb-3 float-end me-1"><i class="fa fa-plus"></i> Create</a>
 <a asp-page="Rewire" permission="RewireGames" class="btn btn-primary mb-3 float-end me-1"><i class="fa fa-wrench"></i> Rewire</a>
-<form class="row">
-	<div class="col-lg-8 col-12 mb-1">
-		<div class="input-group">
-			<label asp-for="SearchTerms" class="input-group-text"></label>
-			<input type="text" asp-for="SearchTerms" class="form-control" />
+<form>
+	<row>
+		<div class="col-lg-8 col-12 mb-1">
+			<div class="input-group">
+				<label asp-for="SearchTerms" class="input-group-text"></label>
+				<input type="text" asp-for="SearchTerms" class="form-control" />
+			</div>
+			<span asp-validation-for="SearchTerms" class="text-danger"></span>
 		</div>
-		<span asp-validation-for="SearchTerms" class="text-danger"></span>
-	</div>
-	<div class="col-2 mb-1">
-		<button type="Submit" class="btn btn-secondary">Go</button>
-	</div>
+		<div class="col-2 mb-1">
+			<button type="Submit" class="btn btn-secondary">Go</button>
+		</div>
+	</row>
+	<row>
+		<div class="col-lg-4 col-12 mb-1">
+			<div class="input-group">
+				<label asp-for="@Model.Games.SystemCode" class="input-group-text"></label>
+				<select asp-items="@Model.SystemList" asp-for="@Model.Games.SystemCode" name="SystemCode" class="form-control"></select>
+			</div>
+		</div>
+		<div class="col-lg-4 col-12 mb-1">
+			<div class="input-group">
+				<label asp-for="@Model.Games.Letter" class="input-group-text"></label>
+				<select asp-items="@Model.LetterList" asp-for="@Model.Games.Letter" name="Letter" class="form-control"></select>
+			</div>
+		</div>
+	</row>
 </form>
-<form class="row">
-	<div class="col-lg-4 col-12 mb-1">
-		<div class="input-group">
-			<label asp-for="@Model.Games.SystemCode" class="input-group-text"></label>
-			<select asp-items="@Model.SystemList" asp-for="@Model.Games.SystemCode" name="SystemCode" class="form-control"></select>
-		</div>
-	</div>
-	<div class="col-lg-4 col-12 mb-1">
-		<div class="input-group">
-			<label asp-for="@Model.Games.Letter" class="input-group-text"></label>
-			<select asp-items="@Model.LetterList" asp-for="@Model.Games.Letter" name="Letter" class="form-control"></select>
-		</div>
-	</div>
-</form>
-
 <partial name="_Pager" model="Model.Games" />
 <table class="table table-bordered table-striped table-sm">
 	<sortable-table-head sorting="@Model.Search" model-type="typeof(Models.GameListModel)" />
