Account/Register - add a default value, and default to it server side instead of UTC, in javascript, only populate the user's browser timezone if dropdown is not already set, fixes #1159

--- a/TASVideos/Pages/Account/Register.cshtml
+++ b/TASVideos/Pages/Account/Register.cshtml
@@ -38,6 +38,7 @@
 			<form-group>
 				<label asp-for="SelectedTimeZone"></label>
 				<timezone-picker asp-for="SelectedTimeZone" class="form-control" />
+				<span asp-validation-for="SelectedTimeZone" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="From"></label>
@@ -69,9 +70,12 @@
 	<script src="https://www.google.com/recaptcha/api.js"></script>
 	<script>
 		{
-			const timezoneOffset = 0 - new Date().getTimezoneOffset();
-			let timezone = document.querySelector(`[data-offset="${timezoneOffset}"]`);
-			timezone.setAttribute('selected', 'selected');
+			// Auto-fill timezone if not set
+			if (!document.querySelector("#SelectedTimeZone option:checked").value) {
+				const timezoneOffset = 0 - new Date().getTimezoneOffset();
+				let timezone = document.querySelector(`[data-offset="${timezoneOffset}"]`);
+				timezone.setAttribute('selected', 'selected');
+			}
 		}
 	</script>
 }
