--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -75,6 +75,7 @@
 		}
 	</table>
 </div>
+<partial name="_Pager" model="Model.Submissions" />
 @section Scripts {
 	<script src="/js/user-search.js"></script>
 	<script>
