--- a/TASVideos/Pages/Games/List.cshtml
+++ b/TASVideos/Pages/Games/List.cshtml
@@ -3,30 +3,49 @@
 @{
 	ViewData["Title"] = "Game List" +
 		(!string.IsNullOrWhiteSpace(Model.Games.SystemCode) ? " - " + Model.Games.SystemCode : string.Empty) +
+		(!string.IsNullOrWhiteSpace(Model.Games.Letter) ? " - " + Model.Games.Letter : string.Empty) +
 		(!string.IsNullOrWhiteSpace(Model.Games.SearchTerms) ? " - " + $@"""{Model.Games.SearchTerms}""" : string.Empty);
 }
 
-<a asp-page="/GameGroups/List" class="btn btn-primary mb-3 float-end mr-5">Game Groups</a>
-<a asp-page="Edit" permission="CatalogMovies" class="btn btn-primary mb-3 float-end me-1"><i class="fa fa-plus"></i> Create</a>
-<a asp-page="Rewire" permission="RewireGames" class="btn btn-primary mb-3 float-end me-1"><i class="fa fa-wrench"></i> Rewire</a>
-<form class="row">
-	<div class="col-lg-5 col-12 mb-1">
-		<div class="input-group">
-			<label asp-for="SearchTerms" class="input-group-text"></label>
-			<input type="text" asp-for="SearchTerms" class="form-control" />
+<div class="container">
+	<div class="row">
+		<div class="col-lg-6 mb-1">
+			<form>
+				<div class="row mb-1">
+					<div class="col-10">
+						<div class="input-group">
+							<label asp-for="SearchTerms" class="input-group-text"></label>
+							<input type="text" asp-for="SearchTerms" class="form-control" />
+						</div>
+						<span asp-validation-for="SearchTerms" class="text-danger"></span>
+					</div>
+					<div class="col-1 mb-1">
+						<button type="Submit" class="btn btn-secondary float-center">Go</button>
+					</div>
+				</div>
+				<div class="row mb-1">
+					<div class="col-5 mb-1">
+						<div class="input-group">
+							<label asp-for="@Model.Games.SystemCode" class="input-group-text"></label>
+							<select asp-items="@Model.SystemList" asp-for="@Model.Games.SystemCode" name="SystemCode" class="form-control"></select>
+						</div>
+					</div>
+					<div class="col-5 mb-1">
+						<div class="input-group">
+							<label asp-for="@Model.Games.Letter" class="input-group-text"></label>
+							<select asp-items="@Model.LetterList" asp-for="@Model.Games.Letter" name="Letter" class="form-control"></select>
+						</div>
+					</div>
+				</div>
+			</form>
 		</div>
-		<span asp-validation-for="SearchTerms" class="text-danger"></span>
-	</div>
-	<div class="col-lg-5 col-12 mb-1">
-		<div class="input-group">
-			<label asp-for="@Model.Games.SystemCode" class="input-group-text"></label>
-			<select asp-items="@Model.SystemList" asp-for="@Model.Games.SystemCode" name="SystemCode" class="form-control"></select>
+		<div class="col">
+			<a asp-page="/GameGroups/List" class="btn btn-primary mb-1 float-end mr-5">Game Groups</a>
+			<a asp-page="Edit" permission="CatalogMovies" class="btn btn-primary mb-1 float-end me-1"><i class="fa fa-plus"></i> Create</a>
+			<a asp-page="Rewire" permission="RewireGames" class="btn btn-primary mb-1 float-end me-1"><i class="fa fa-wrench"></i> Rewire</a>
 		</div>
 	</div>
-	<div class="col-2">
-		<button type="Submit" class="btn btn-secondary">Go</button>
-	</div>
-</form>
+</div>
 
 <partial name="_Pager" model="Model.Games" />
 <table class="table table-bordered table-striped table-sm">
@@ -39,10 +58,11 @@
 				<a asp-page="Index" asp-route-id="@game.Id">@game.DisplayName</a>
 			</td>
 			<td>
-				<a asp-page="Edit" permission="CatalogMovies" asp-route-id="@game.Id" class="btn btn-primary btn-sm"><i class="fa fa-pencil"></i> Edit</a>
-				<a asp-page="Versions/List" asp-route-gameId="@game.Id" class="btn btn-secondary btn-sm"><i class="fa fa-pencil"></i> Versions</a>
+				<a asp-page="Edit" permission="CatalogMovies" asp-route-id="@game.Id" class="btn btn-primary btn-sm mb-1"><i class="fa fa-pencil"></i> Edit</a>
+				<a asp-page="Versions/List" asp-route-gameId="@game.Id" class="btn btn-secondary btn-sm mb-1"><i class="fa fa-pencil"></i> Versions</a>
 			</td>
 		</tr>
 	}
 </table>
+<partial name="_Pager" model="Model.Games" />
 
