add a free text field on users for moderators to add comments such as ban information

--- a/TASVideos/Pages/Users/Edit.cshtml
+++ b/TASVideos/Pages/Users/Edit.cshtml
@@ -178,6 +178,10 @@
 			</form-group>
 		</column>
 	</row>
+	<full-row>
+		<label asp-for="UserToEdit.ModeratorComments"></label>
+		<textarea asp-for="UserToEdit.ModeratorComments" class="form-control" rows="5"></textarea>
+	</full-row>
 	<two-column-select id-list="UserToEdit.SelectedRoles" available-list="AvailableRoles" />
 	@await Component.RenderWiki("System/UserEditRole")
 	<hr />
