add TOC to Roles/List and Permissions, resolves #730

--- a/TASVideos/Pages/Roles/_Role.cshtml
+++ b/TASVideos/Pages/Roles/_Role.cshtml
@@ -4,7 +4,7 @@
 }
 <card class="mb-2">
 	<cardbody>
-		<h5 class="card-title">@Model!.Name</h5>
+		<h5 id="@Model.Name" class="card-title">@Model.Name</h5>
 		<row>
 			<div class="col-md-6">
 				<div permission="EditRoles">
