--- a/TASVideos/Pages/Permissions/Index.cshtml
+++ b/TASVideos/Pages/Permissions/Index.cshtml
@@ -2,10 +2,32 @@
 @model IndexModel
 @{
 	ViewData["Title"] = "Permission List";
+	var toc = Model.Permissions
+		.OrderBy(m => m.Group)
+		.ThenBy(m => m.Id)
+		.Select(m => (m.Name, m.Group))
+		.GroupBy(m => m.Group);
 }
 
 <h4>@ViewData["Title"]</h4>
 <p>These are a list of site permissions that are allocated to site roles</p>
+@foreach (var entry in toc)
+{
+	<ul>
+		<li>
+			@entry.Key
+			<ul>
+				@foreach (var item in entry)
+				{
+					<li>
+						<a href="#@item.Name">@item.Name</a>
+					</li>
+				}
+			</ul>
+		</li>
+	</ul>
+}
+
 <table class="table table-bordered table-striped">
 	<tr>
 		<th>@Html.DisplayNameFor(m => m.Permissions.First().Name)</th>
@@ -13,10 +35,10 @@
 		<th>@Html.DisplayNameFor(m => m.Permissions.First().Roles)</th>
 		<th>@Html.DisplayNameFor(m => m.Permissions.First().Description)</th>
 	</tr>
-	@foreach (var entry in Model.Permissions.OrderBy(m => m.Id))
+	@foreach (var entry in Model.Permissions.OrderBy(m => m.Group).ThenBy(m => m.Id))
 	{
 		<tr>
-			<td nowrap>@entry.Name</td>
+			<td id="@entry.Name" nowrap>@entry.Name</td>
 			<td nowrap>@entry.Group</td>
 			<td nowrap>
 				<ul>
