--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -83,67 +83,69 @@
 	</cardbody>
 </div>
 
-@foreach (var comment in Model.Comments.OrderBy(c => c.CreationTimeStamp))
-{
-	<div class="card border-primary border mb-2" condition="@(Model.Comments.Any())">
-		<cardheader>
-			<row>
-				<div class="col">
-					<h6>
-						<profile-link username="@comment.UserName"></profile-link>
-					</h6>
-					<div class="text-muted">
-						<timezone-convert asp-for="@comment.CreationTimeStamp" in-line="true" />
+<div condition="@(!Model.HideComments)">
+	@foreach (var comment in Model.Comments.OrderBy(c => c.CreationTimeStamp))
+	{
+		<div class="card border-primary border mb-2" condition="@(Model.Comments.Any())">
+			<cardheader>
+				<row>
+					<div class="col">
+						<h6>
+							<profile-link username="@comment.UserName"></profile-link>
+						</h6>
+						<div class="text-muted">
+							<timezone-convert asp-for="@comment.CreationTimeStamp" in-line="true" />
+						</div>
 					</div>
-				</div>
-				<div class="col" condition="User.Has(PermissionTo.EditForumPosts) || User.GetUserId() == comment.UserId">
-					<div class="float-end mb-1 mt-1">
-						<button type="button" class="btn btn-primary btn-sm border border-warning" id="edit-button-@comment.Id" onclick="
-							this.classList.add('d-none');
-							document.getElementById('edit-comment-@comment.Id').classList.remove('d-none');
-							document.getElementById('view-comment-@comment.Id').classList.add('d-none');
-							"><i class="fa fa-pencil"></i> Edit
+					<div class="col" condition="User.Has(PermissionTo.EditForumPosts) || User.GetUserId() == comment.UserId">
+						<div class="float-end mb-1 mt-1">
+							<button type="button" class="btn btn-primary btn-sm border border-warning" id="edit-button-@comment.Id" onclick="
+								this.classList.add('d-none');
+								document.getElementById('edit-comment-@comment.Id').classList.remove('d-none');
+								document.getElementById('view-comment-@comment.Id').classList.add('d-none');
+								"><i class="fa fa-pencil"></i> Edit
+							</button>
+							<delete-button
+								class="btn-sm border border-warning"
+								asp-href="/UserFiles/Index?handler=DeleteComment&commentId=@comment.Id&returnUrl=@Context.CurrentPathToReturnUrl()"
+								warning-message="Are you sure you want to delete this comment?"
+								condition="User.Has(PermissionTo.EditForumPosts) || User.GetUserId() == comment.UserId">
+								<i class="fa fa-remove"></i>
+							</delete-button>
+						</div>
+					</div>
+				</row>
+			</cardheader>
+			<cardbody>
+				<wiki-markup markup="@comment.Text" id="view-comment-@comment.Id"></wiki-markup>
+				<div class="d-none" id="edit-comment-@comment.Id">
+					<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="EditComment" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()">
+						<input type="hidden" name="commentId" value="@comment.Id" />
+						<textarea name="comment" class="form-control">@comment.Text</textarea>
+						<button type="submit" class="btn btn-primary btn-sm mt-2"><i class="fa fa-save"></i> Save</button>
+						<button type="button" class="btn btn-secondary btn-sm mt-2" onclick="
+							document.getElementById('edit-comment-@comment.Id').classList.add('d-none');
+							document.getElementById('view-comment-@comment.Id').classList.remove('d-none');
+							document.getElementById('edit-button-@comment.Id').classList.remove('d-none');
+							"><i class="fa fa-times"></i> Cancel
 						</button>
-						<delete-button
-							class="btn-sm border border-warning"
-							asp-href="/UserFiles/Index?handler=DeleteComment&commentId=@comment.Id&returnUrl=@Context.CurrentPathToReturnUrl()"
-							warning-message="Are you sure you want to delete this comment?"
-							condition="User.Has(PermissionTo.EditForumPosts) || User.GetUserId() == comment.UserId">
-							<i class="fa fa-remove"></i>
-						</delete-button>
-					</div>
+					</form>
 				</div>
-			</row>
+			</cardbody>
+		</div>
+	}
+
+	<div class="card border-primary border mb-2" permission="CreateForumPosts">
+		<cardheader style="background-color: var(--bs-gray-200)">
+			<h4>Comment:</h4>
 		</cardheader>
 		<cardbody>
-			<wiki-markup markup="@comment.Text" id="view-comment-@comment.Id"></wiki-markup>
-			<div class="d-none" id="edit-comment-@comment.Id">
-				<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="EditComment" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()">
-					<input type="hidden" name="commentId" value="@comment.Id" />
-					<textarea name="comment" class="form-control">@comment.Text</textarea>
-					<button type="submit" class="btn btn-primary btn-sm mt-2"><i class="fa fa-save"></i> Save</button>
-					<button type="button" class="btn btn-secondary btn-sm mt-2" onclick="
-						document.getElementById('edit-comment-@comment.Id').classList.add('d-none');
-						document.getElementById('view-comment-@comment.Id').classList.remove('d-none');
-						document.getElementById('edit-button-@comment.Id').classList.remove('d-none');
-						"><i class="fa fa-times"></i> Cancel
-					</button>
-				</form>
-			</div>
+			<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="Comment" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()">
+				<input type="hidden" name="fileId" value="@Model.Id "/>
+				<label class="form-control-label"></label>
+				<textarea class="form-control" name="comment"></textarea>
+				<button type="submit" class="btn btn-primary mt-3 mb-3"><i class="fa fa-plus"></i> Post</button>
+			</form>
 		</cardbody>
 	</div>
-}
-
-<div class="card border-primary border mb-2" permission="CreateForumPosts">
-	<cardheader style="background-color: var(--bs-gray-200)">
-		<h4>Comment:</h4>
-	</cardheader>
-	<cardbody>
-		<form method="POST" asp-page="/UserFiles/Index" asp-route-handler="Comment" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()">
-			<input type="hidden" name="fileId" value="@Model.Id "/>
-			<label class="form-control-label"></label>
-			<textarea class="form-control" name="comment"></textarea>
-			<button type="submit" class="btn btn-primary mt-3 mb-3"><i class="fa fa-plus"></i> Post</button>
-		</form>
-	</cardbody>
 </div>
