--- a/TASVideos/Pages/UserFiles/Info.cshtml
+++ b/TASVideos/Pages/UserFiles/Info.cshtml
@@ -17,9 +17,7 @@
 
 <div class="mb-2">
 	<a asp-page="/UserFiles/Upload" class="btn btn-primary"><i class="fa fa-upload"></i> Upload</a>
-	<div class="float-end">
-		<a asp-page="Index" class="btn btn-secondary">All User Files</a>
-	</div>
+	<a asp-page="Index" class="btn btn-secondary float-end">All User Files</a>
 </div>
 
 <partial name="_UserFileInfo" model="Model.UserFile" />
