--- a/TASVideos/Pages/RamAddresses/List.cshtml
+++ b/TASVideos/Pages/RamAddresses/List.cshtml
@@ -3,6 +3,9 @@
 @{
 	ViewData["Title"] = "Listing of Games With Addresses";
 }
+<warning-alert>
+	Ram address support will be removed from TASVideos. For applicable systems, a .wch file will be generated to replace see the <a asp-page="/Forums/Topics/Index" asp-route-id="23443">discussion topic</a> for details
+</warning-alert>
 <div class="table-container">
 	<table class="table table-striped table-bordered">
 		<tr>
