add more error handling and recover form data

--- a/TASVideos/Pages/Error.cshtml
+++ b/TASVideos/Pages/Error.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
+@model ErrorModel
 @{
 	ViewData["Title"] = "System Error";
 }
 @await Component.RenderWiki("System/Error")
+<pre>@Model.RecoveredFormData</pre>
