--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -1,10 +1,10 @@
-﻿@model TASVideos.Pages.Forum.Posts.Models.ForumPostEntry
-<card id="@Model!.Id" class="@(Model.Highlight ? "forum-post-highlight border-warning border-2" : "border-primary") border mb-2">
+﻿@model TASVideos.Pages.Forum.Models.IForumPostEntry
+<card id="@Model.Id" class="@(Model.Highlight ? "forum-post-highlight border-warning border-2" : "border-primary") border mb-2">
 	<cardheader class="px-2 py-1">
 		<row class="align-items-center">
 			<div class="col-lg-2 col-md-3 col-auto">
 				<small>
-					<a href="/Forum/Posts/@(Model!.Id)"
+					<a href="/Forum/Posts/@(Model.Id)"
 					   title="Link to this post"
 					   class="float-start text-decoration-none text-dark">
 						<i class="fa fa-bookmark-o"></i>
