--- a/TASVideos/Pages/Games/Edit.cshtml
+++ b/TASVideos/Pages/Games/Edit.cshtml
@@ -56,6 +56,10 @@
 		<button id="submit-btn" type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Update</button>
 		<a condition="!string.IsNullOrWhiteSpace(returnUrl)" href="@returnUrl" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
 		<a condition="string.IsNullOrWhiteSpace(returnUrl)" asp-page="List" class="btn btn-secondary"><i class="fa fa-times"></i> Cancel</a>
+		<div class="form-check-inline">
+			<label asp-for="Game.MinorEdit" class="form-check-label"></label>
+			<input asp-for="Game.MinorEdit" type="checkbox" class="form-check-input"/>
+		</div>
 	</div>
 </form>
 
