Display publisher and judge stats as rows (+tiny tweaks) (#1384)
* - display publisher and stats as rows
- move profile cards 2px away from each other vertically
- move profile buttons to the right
- add space to replacement text of pub links

* simplify creation of dictionary of counts

Co-authored-by: adelikat <adelikat@tasvideos.org>

--- a/TASVideos/Pages/Activity/Publishers.cshtml
+++ b/TASVideos/Pages/Activity/Publishers.cshtml
@@ -2,8 +2,23 @@
 @{ ViewData["Title"] = $"Publisher Activity for {Model.UserName}"; }
 @model PublishersModel
 
+@{
+	var total = Model.Publications.Count();
+
+	var classCounts = Model.Publications
+		.GroupBy(p => p.Class)
+		.ToDictionary(tkey => tkey.Key, tvalue => tvalue.Count());
+}
+
 <p>Movies published by <profile-link username="@Model.UserName"></profile-link></p>
 <hr />
+<label>Total: @total</label>
+@foreach (var c in classCounts)
+{
+	<div>@c.Key: @c.Value</div>
+}
+<hr />
+
 <div class="table-container">
 	<table class="table table-striped">
 		<tr>
