remove white from cards in light mode
- use bs-gray-300 for card headers instead of 200, and 200 instead of white for card bodies
- make site bg ever so slightly lighter so cards stand out a bit
- make forum sig on profile page match the style of forum sig in posts
- add border to main page's topicfeed to match the new card style.
-- this seems to be the only change affecting dark mode, where that border is now also 1px (was none), unlike other dark mode cards that have 2px border. I wonder if I should make it match dark mode cards or leave borderless for whatever reason.
-- topicfeed on its own page is still intact in dark mode, tho maybe we should add a gap between cards like posts and userfile comments have?

--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -50,7 +50,7 @@
 	</cardheader>
 	<cardbody class="px-2 py-0">
 		<row class="gx-3">
-			<div class="col-lg-2 col-md-3 py-2" style="background-color: var(--bs-gray-200)">
+			<div class="col-lg-2 col-md-3 py-2" style="background-color: var(--cardheader)">
 				<row class="gx-0">
 					<div class="col-10 col-md-12">
 						<row class="my-auto my-md-0 h-100 justify-content-center align-items-center">
