--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -103,7 +103,7 @@
 					</div>
 				</div>
 			</cardbody>
-			<div condition="!string.IsNullOrWhiteSpace(Model.Signature)" class="card-footer">
+			<div condition="!string.IsNullOrWhiteSpace(Model.Signature)" class="forum-signature text-muted">
 				<forum-markup markup=@Model.Signature enable-html=false enable-bb-code=true></forum-markup>
 			</div>
 		</card>
