--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -35,7 +35,7 @@
 	</cardheader>
 	<cardbody class="px-2 py-0">
 		<row class="gx-3">
-			<div class="col px-3 py-3" style="background-color: var(--bs-gray-200)">
+			<div class="col px-3 py-3" style="background-color: var(--cardheader)">
 				@Model.FileName
 
 				<div condition="@(Model.IsMovie)">
@@ -136,7 +136,7 @@
 	}
 
 	<div class="card border-primary border mb-2" permission="CreateForumPosts">
-		<cardheader style="background-color: var(--bs-gray-200)">
+		<cardheader style="background-color: var(--cardheader)">
 			<h4>Comment:</h4>
 		</cardheader>
 		<cardbody>
