--- a/TASVideos/wwwroot/css/partials/_darkmode.scss
+++ b/TASVideos/wwwroot/css/partials/_darkmode.scss
@@ -8,6 +8,8 @@
 	--border-separator-color: #{$bs-gray-700};
 	--cardprimary: #{$card-primary-dark};
 	--cardsecondary: #{$card-secondary-dark};
+	--cardheader: #{$card-header-dark};
+	--cardbody: #{$card-body-dark};
 	--bs-warning: #{$warning-dark};
 	--bs-warning-rgb: #{$warning-dark-rgb};
 	--bs-info: #{$info-dark};
